[gd_scene load_steps=6 format=3 uid="uid://qqm5ltxvpwc5"]

[ext_resource type="Script" uid="uid://c6v6viui78p6w" path="res://scenes/collect/item.gd" id="1_quof4"]
[ext_resource type="Texture2D" uid="uid://c68aaxksjv001" path="res://player_stone.png" id="2_lx8ej"]
[ext_resource type="Texture2D" uid="uid://cm227oytxy52i" path="res://player_paper.png" id="3_44j70"]
[ext_resource type="Texture2D" uid="uid://qy78kkc05875" path="res://player_scissor.png" id="4_7xxel"]

[sub_resource type="CircleShape2D" id="CircleShape2D_mek2u"]
radius = 26.0192

[node name="Item" type="Node2D"]
script = ExtResource("1_quof4")

[node name="SpriteRock" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("2_lx8ej")

[node name="SpritePaper" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("3_44j70")

[node name="SpriteScissor" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_7xxel")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_mek2u")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
